fix broken layout on mobile.

--- a/sass/footer-pane.sass
+++ b/sass/footer-pane.sass
@@ -2,6 +2,7 @@
  * Defines the look and feel of the footer pane.
  */
 
+$desktop-min: 640px
 #footer-site
     background-color: #000
     color: #fff
@@ -30,7 +31,7 @@
             padding-left: 0
 
     .footer-site-box
-        @media screen and (min-width: 640px)
+        @media screen and (min-width: $desktop-min) 
             box-sizing: border-box
             width: 33%
             float: left
